--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <p><i class="fa-solid fa-envelope"></i>shivmodi258@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i>8128836263</p>
                         <div class="social-icons">
-                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/shiv-modi-31a674252/"><i class="fa-brands fa-linkedin"></i></a>
                             <a href="#"><i class="fa-brands fa-facebook"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
